[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Scripts/Level.gd" type="Script" id=1]
[ext_resource path="res://Assets/Models/Tiles/TileSet.meshlib" type="MeshLibrary" id=2]
[ext_resource path="res://Assets/Models/Objects/Chao_Basico.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Models/Objects/Process_01.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Models/Objects/Process_Box_Output.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Models/Objects/Process_Box_Input.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Models/Objects/Player.tscn" type="PackedScene" id=7]

[node name="Level" type="Spatial"]

script = ExtResource( 1 )

[node name="GridMap" type="GridMap" parent="." index="0"]

theme = ExtResource( 2 )
cell_size = Vector3( 2, 2, 2 )
cell_octant_size = 8
cell_center_x = true
cell_center_y = true
cell_center_z = true
cell_scale = 1.0
collision_layer = 1
collision_mask = 1
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="1"]

environment = null

[node name="DirectionalLight" type="DirectionalLight" parent="." index="2"]

transform = Transform( 0.866025, -2.18557e-08, 0.5, -0.5, -3.78552e-08, 0.866025, 0, -1, -4.37114e-08, 3, 6.94262, 15.2018 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0

[node name="Chao_Basico" parent="." index="3" instance=ExtResource( 3 )]

_sections_unfolded = [ "Transform" ]

[node name="Process_01" parent="." index="4" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.25801, 0.5, -4.82237 )

[node name="Process_02" parent="." index="5" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.74484, 0.5, -4.05113 )

[node name="Box_Output" parent="." index="6" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.699, 0.5, 2.75582 )

[node name="Box_Input" parent="." index="7" instance=ExtResource( 6 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.81483, 0.5, -3.67285 )

[node name="Player_01" parent="." index="8" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.57342, 0.5, 5.77979 )

[node name="Player_02" parent="." index="9" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.45667, 0.5, 4.28834 )

[node name="exit_game" type="Button" parent="." index="10"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 211.0
margin_top = 146.0
margin_right = 450.0
margin_bottom = 211.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit"
flat = false
align = 1


